<resources>
    <string name="app_name">Train it easy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Вход</string>
    <string name="login_hint">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="log_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="crate_username">Придумайте логин</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="create_password_again">Введите пароль еще раз</string>
    <string name="do_registration">Зарегистрироваться</string>
    <string name="fill_information">Заполните информацию о себе</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_last_name">Ваша фамилия</string>
    <string name="birth_date">Ваша дата рождения</string>
    <string name="your_height">Ваш рост</string>
    <string name="your_weight">Ваш вес</string>
    <string name="your_gender">Ваш пол</string>
    <string name="done">Готово</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="popular_categories">Популярные категории</string>
    <string name="recipe_of_the_day">Рецепт дня</string>
    <string name="get_recipe">Получить рецепт</string>
    <string name="prep_time">Подготовка: %d мин</string>
    <string name="cook_time">Приготовление: %d мин</string>
    <string name="choose_goal">Выберите цель</string>
    <string name="train_title">Название тренировки</string>
    <string name="difficulty">Сложность</string>
    <string name="location">Локация</string>
    <string name="duration">Продолжительность</string>
    <string name="calories">Калории</string>
    <string name="description">Описание</string>
    <string name="train_list">Список упражнений</string>
    <string name="training_list">Список тренировок</string>
</resources>