<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.citrus.cookiteasy.presentation.login.LogInViewModel" />
        <import type="android.view.View"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="262dp"
            android:layout_height="45dp"
            android:layout_marginTop="160dp"
            android:text="@string/enter"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:hint="@string/enter_login"
            android:orientation="vertical"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.362">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginBottom="340dp"
            android:hint="@string/enter_password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_slash_eye"
            app:endIconMode="password_toggle"
            app:cursorColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/to_reg_tv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            android:text="@string/login_hint"
            android:layout_marginTop="15dp"
            android:textColor="@color/app_blue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_reg_tv"
            app:layout_constraintVertical_bias="0.171"
            android:text="@string/log_in"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.821" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>