<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.citrus.cookiteasy.presentation.profileinfo.ProfileInfoViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fill_information"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/your_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_title_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileinfo_name_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_name_tv"
            app:layout_constraintVertical_bias="0.001">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileinfo_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"

                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_last_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_name_TIL" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileinfo_last_name_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_last_name_tv"
            app:layout_constraintVertical_bias="0.002">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileinfo_last_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_birth_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/birth_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_last_name_TIL" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_birth_field"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tv_border"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_birth_tv"
            app:layout_constraintVertical_bias="0.009"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry">


        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_height_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/your_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_birth_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileinfo_height_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_height_tv">

            <EditText
                android:id="@+id/profileinfo_height_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:inputType="number"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_weight_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toEndOf="@+id/profileinfo_height_tv"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_birth_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileinfo_weight_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toEndOf="@+id/profileinfo_height_TIL"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_weight_tv"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/profileinfo_weight_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:inputType="number"
                android:paddingStart="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileinfo_gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:text="@string/your_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_height_TIL" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="208dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileinfo_gender_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileinfo_ready_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>