<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <data>
        <variable
            name="viewModel"
            type="com.citrus.cookiteasy.presentation.registration.RegistrationViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registration_title_tv"
            android:layout_width="262dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registration_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/crate_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_title_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_login_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_login_tv"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_login_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registration_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/create_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_login_TIL" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:cursorColor="@color/black"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_password_tv"
            app:passwordToggleDrawable="@drawable/ic_slash_eye"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_password_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registration_password_again_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/create_password_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_password_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password_again_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:cursorColor="@color/black"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_password_again_tv"
            app:passwordToggleDrawable="@drawable/ic_slash_eye"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_password_again_edit_text"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_password_again_input_layout"
            android:text="@string/do_registration"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>